various edits for day 1

--- a/howtos/Makefile
+++ b/howtos/Makefile
@@ -8,3 +8,7 @@ clean:
 %.html: %.Rmd
 	echo $(<)
 	Rscript -e "library(knitr); knit2html('$(<)')"
+
+accessingUnixCommandLine.html: accessingUnixCommandLine.md
+	echo $(<)
+	pandoc -s -o accessingUnixCommandLine.html accessingUnixCommandLine.md
